<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="to_do_list">To Do List</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="save">Save</string>
    <string name="complete_task">Complete Task</string>
    <string name="delete_question">Are you sure you want to delete this task?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>